# konarr

./: .dockerignore  .geekorm.yml  .gitignore  .gitmodules  .release.yml  Cargo.toml  DEVELOPING.md  README.md  docker-compose.yml  install.sh
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  catalogue-request.yml
.github/workflows/: build.yml  release.yml  security.yml
benches/: alert_calculator.rs
cli/: Cargo.toml  Dockerfile  agent.Dockerfile
cli/src/: main.rs  statistics.rs
cli/src/cli/: agent.rs  database.rs  display.rs  generate.rs  index.rs  mod.rs  search.rs  tasks.rs
cli/src/utils/: interactive.rs
examples/: client.rs  grypedb.rs
server/: Cargo.toml  Dockerfile  Rocket.toml  build.rs  konarr.yml
server/src/: cli.rs  error.rs  main.rs
server/src/api/: admin.rs  auth.rs  base.rs  dependencies.rs  health.rs  mod.rs  projects.rs  security.rs  snapshots.rs  user.rs  websock.rs
server/src/guards/: limit.rs  mod.rs  pagination.rs
server/src/routes/: mod.rs
src/: error.rs  lib.rs
src/bom/: mod.rs  sbom.rs
src/bom/cyclonedx/: mod.rs  spec_v1_5.rs  spec_v1_6.rs
src/client/: mod.rs  projects.rs  security.rs  server.rs  snapshot.rs  ws.rs
src/client/projects/: agent.rs  mod.rs
src/db/: mod.rs
src/db/v0_3_3/: create.sql  database.json  mod.rs
src/db/v0_5_0/: create.sql  data.rs  database.json  migrations.json  mod.rs  upgrade.sql
src/models/: cache.rs  mod.rs  projects.rs  settings.rs
src/models/auth/: mod.rs  sessions.rs  users.rs
src/models/auth/users/: mod.rs  register.rs
src/models/components/: compmanager.rs  components.rs  comptype.rs  compversion.rs  mod.rs
src/models/dependencies/: components.rs  components_type.rs  components_version.rs  comps.yml  mod.rs  snapshots.rs
src/models/dependencies/snapshots/: metadata.rs  mod.rs  sboms.rs
src/models/projects/: data.rs  mod.rs  projectsnapshot.rs
src/models/security/: advisories.rs  alerts.rs  mod.rs
src/models/settings/: config.rs  defaults.rs  keys.rs  mod.rs
src/tasks/: advisories.rs  advisories_sync.rs  alerts.rs  catalogue.rs  cleanup.rs  dependencies.rs  mod.rs  projects.rs  sbom.rs  server.rs  statistics.rs
src/tools/: grype.rs  mod.rs  syft.rs  trivy.rs
src/utils/: config.rs  grypedb.rs  mod.rs  password.rs  rand.rs
src/utils/catalogue/: data.yml  mod.rs
src/utils/config/: client.rs  config.rs  grypedb.rs  mod.rs  models.rs  server.rs
src/utils/containers/: filter.rs  mod.rs
src/utils/grypedb/: matcher.rs  mod.rs
