[workspace]
resolver = "2"
members = [".", "server", "cli"]

[workspace.package]
version = "0.3.3"
license = "Apache-2.0"
description = "Konarr"

edition = "2021"

rust-version = "1.75"

keywords = []
categories = []

documentation = "https://docs.rs/konarr"
repository = "https://github.com/42ByteLabs/konarr"

authors = ["42ByteLabs"]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[package]
name = "konarr"
description.workspace = true
version.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

categories.workspace = true
keywords.workspace = true
authors.workspace = true

[package.metadata.release]
shared-version = true
tag-name = "v{{version}}"

[features]
default = []
tasks = ["dep:tokio", "dep:tokio_schedule"]
# Database / Models
models = ["dep:geekorm", "dep:libsql"]
# Tools
tools = ["dep:tokio", "client"]
tools-grypedb = ["tools", "models", "dep:hex", "dep:flate2", "dep:tar"]
# Client
client = ["websocket", "dep:reqwest", "dep:openssl", "dep:tokio"]
agent = []
websocket = ["dep:tokio-tungstenite"]
docker = ["dep:bollard"]

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9"
thiserror = "2"
url = { version = "2.5", features = ["serde"] }
base64 = "0.22"
hex = { version = "0.4", optional = true }
flate2 = { version = "1.0", optional = true }
tar = { version = "0.4", optional = true }

# Database / Models
geekorm = { version = "0.9", features = ["all", "semver", "libsql", "backends-tokio", "migrations", "backends"], optional = true }
libsql = { version = "0.6", optional = true }

# SBOM
purl = { version = "^0.1" }
serde_json = "1.0"
sha2 = "0.10"
semver = { version = "1.0", features = ["serde"] }

# Runtime
tokio = { version = "1", features = ["full"], optional = true }
tokio_schedule = { version = "0.3", optional = true }
async-trait = "0.1"
# Web Client
reqwest = { version = "0.12", features = ["json", "cookies"], optional = true }
openssl = { version = "0.10", features = ["vendored"], optional = true }

# Docker
bollard = { version = "0.18", optional = true }
figment = { version = "0.10", features = ["env", "serde_yaml", "yaml"] }
tokio-tungstenite = { version = "0.26", features = ["url", "native-tls"], optional = true }

[dev-dependencies]
konarr = { path = ".", features = ["client"] }
geekorm = { version = "0.9", features = ["all", "semver", "libsql"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"

criterion = { version = "0.5", features = ["async_futures", "async_tokio", "html_reports"] }

[[bench]]
name = "alert_calculator"
harness = false
required-features = ["models", "tasks"]

[[example]]
name = "grypedb"
path = "examples/grypedb.rs"
required-features = ["tools-grypedb"]

