[workspace]
resolver = "2"
members = [".", "server", "cli"]

[workspace.package]
version = "0.5.0"
license = "Apache-2.0"
description = "Konarr"

edition = "2024"

rust-version = "1.85"

keywords = []
categories = []

documentation = "https://docs.rs/konarr"
repository = "https://github.com/42ByteLabs/konarr"

authors = ["42ByteLabs"]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[package]
name = "konarr"
description.workspace = true
version.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

categories.workspace = true
keywords.workspace = true
authors.workspace = true

[package.metadata.release]
shared-version = true
tag-name = "v{{version}}"

[features]
default = []
all = ["tasks", "models", "tools-grypedb", "sbom", "client", "websocket", "docker"]

tasks = ["dep:tokio", "dep:tokio_schedule"]
# Database / Models
models = ["dep:geekorm", "dep:libsql"]
# Tools
tools = ["dep:tokio", "client"]
tools-grypedb = ["tools", "models", "dep:hex", "dep:flate2", "dep:tar"]
# SBOM Generation/Parsing
sbom = ["models", "dep:purl", "dep:serde_json", "dep:semver"]
# Client
client = ["sbom", "dep:reqwest", "dep:openssl", "dep:tokio"]
agent = []
websocket = ["dep:tokio-tungstenite"]
docker = ["dep:bollard"]

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.10"
thiserror = "2"
url = { version = "2.5", features = ["serde"] }
uuid = { version = "1.20", features = ["serde", "v4"] }
base64 = "0.22"
hex = { version = "0.4", optional = true }
flate2 = { version = "1.1", optional = true }
tar = { version = "0.4", optional = true }

# Database / Models
geekorm = { version = "0.11", features = ["all", "semver", "libsql", "migrations"], optional = true }
libsql = { version = "^0.9", optional = true }

# SBOM
purl = { version = "^0.1", features = ["serde"], optional = true }
serde_json = { version = "1.0", optional = true }
sha2 = "0.10"
semver = { version = "1.0", features = ["serde"], optional = true }

# Runtime
tokio = { version = "1", features = ["full"], optional = true }
tokio_schedule = { version = "0.3", optional = true }
async-trait = "0.1"
# Web Client
reqwest = { version = "0.13", features = ["json", "cookies"], optional = true }
openssl = { version = "0.10", features = ["vendored"], optional = true }

# Docker
bollard = { version = "0.20", optional = true }
figment = { version = "0.10", features = ["env", "serde_yaml", "yaml"] }
tokio-tungstenite = { version = "0.28", features = ["url", "native-tls"], optional = true }

[dev-dependencies]
konarr = { path = ".", features = ["client", "tasks", "tools", "tools-grypedb"] }
geekorm = { version = "0.11", features = ["all", "semver", "libsql"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"

criterion = { version = "0.8", features = ["async_futures", "async_tokio", "html_reports"] }

[[bench]]
name = "alert_calculator"
harness = false
required-features = ["models", "tasks"]

[[example]]
name = "grypedb"
path = "examples/grypedb.rs"
required-features = ["tasks", "tools-grypedb"]
