[package]
name = "konarr-cli"
description = "CLI for Konarr"

version.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

categories.workspace = true
keywords.workspace = true
authors.workspace = true

[package.metadata.release]
shared-version = true
tag-name = "v{{version}}"

[features]
default = ["agent"]
# Database
database = ["dep:geekorm", "dep:libsql", "konarr/models"]
# Tasks
tasks = ["database", "konarr/tasks", "konarr/tools-grypedb"]
# Agent
agent = ["dep:bollard", "dep:openssl", "konarr/client", "konarr/docker", "konarr/tools", "konarr/agent"]

[dependencies]
konarr = { version = "0.4.1", path = "../", default-features = false }

tokio = { version = "1", features = ["full"] }
tokio_schedule = "^0.3" 

# CLI
clap = { version = "4.5", features = ["derive", "env"] }
console = "0.15"
dialoguer = { version = "0.11", features = ["fuzzy-select", "password"] }
indicatif = "0.17"
dotenvy = { version = "0.15", features = ["cli"] }
# Database
geekorm = { version = "^0.11", features = ["all", "libsql"], optional = true }
libsql = { version = "^0.6", optional = true }
# Docker API
bollard = { version = "0.18", optional = true }
# OpenSSL
openssl = { version = "0.10", features = ["vendored"], optional = true }

# Misc
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
glob = "0.3"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

